--- a/.github/workflows/server-build.yaml
+++ b/.github/workflows/server-build.yaml
@@ -84,3 +84,9 @@ jobs:
           export DEEPLINKS_CALL_OPTIONS=$(cat call-options.json)
           export DEBUG="deeplinks:engine:*,deeplinks:migrations:*"
           deeplinks
+            - name: Run deeplinks
+
+      - name: Check docker containers not Restarting
+        run: |
+          ! docker ps --all | grep -qF "Restarting"
+
